--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Alejandro Gómez, Camilo Hernandez",
   "license": "ISC",
   "dependencies": {
+    "@vercel/kv": "^2.0.0",
     "flag-icons": "^7.2.3"
   }
 }
