--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@vercel/kv": "^2.0.0",
-    "flag-icons": "^7.2.3"
+    "flag-icons": "^7.2.3",
+    "jquery": "^3.7.1"
   }
 }
